# TheDelver

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: arena.c.3961991C41CDC55A.idx  arena.h.48290DD795F85A30.idx  core.h.0A759D30F8C37A2E.idx  main.c.FA96DE6921D4BA75.idx  spriteatlas.c.46861008BC3D9B9C.idx  spriteatlas.h.DC8B12EB13300DA6.idx  spriterenderer.c.D26455C672882B26.idx  spriterenderer.h.663D57663D4BD67C.idx  tile.h.3CDB705B8DD6C573.idx  types.h.7199B594ED3A6630.idx  worldgen.c.5CA08D914431580A.idx  worldgen.h.E0117E21745E480B.idx
include/: arena.h  camera.h  core.h  gamescene.h  pathfinding.h  player.h  scenemanager.h  spriteatlas.h  spriterenderer.h  stack.h  tile.h  types.h  worldgen.h
include/scenes/: dungeon.h  ending.h  overworld.h  title.h  town.h
src/: arena.c  camera.c  main.c  pathfinding.c  player.c  scenemanager.c  spriteatlas.c  spriterenderer.c  stack.c  worldgen.c
src/scenes/: dungeon.c  ending.c  overworld.c  title.c  town.c
